app-ligera-pro.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-ligera
spec:
  replicas: 2
  selector:
    matchLabels:
      app: web
  template:
    metadata:
      labels:
        app: web
      annotations:
        # Esto le dice a Prometheus: "¡Oye, aquí hay métricas!"
        prometheus.io/scrape: "true"
        prometheus.io/port: "9113"
    spec:
      containers:
      - name: nginx
        image: nginx:alpine
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: "50m"
            memory: "32Mi"
          limits:
            cpu: "100m"
            memory: "64Mi"
      
      # Este es el "Sidecar": un contenedor pequeño que traduce 
      # el estado de Nginx a formato Prometheus
      - name: exporter
        image: nginx/nginx-prometheus-exporter:latest
        args:
          - -nginx.scrape-uri=http://localhost/stub_status
        ports:
        - containerPort: 9113
---
apiVersion: v1
kind: Service
metadata:
  name: app-ligera
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
  - name: metrics
    port: 9113
    targetPort: 9113
  selector:
    app: web
